// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PledgingDetailsSummaryCard renders participant details summary card snapshot 1`] = `
<div class="text-sm">
  <div>
    <div class="flex justify-between border-b-2">
      <div>Total Pledged Amount</div>
      <div>
        $2
      </div>
    </div>
    <div class="flex justify-between border-b-2 border-grey-darkest">
      <div>
        Total Payments Received

        <span><i class="far fa-info-circle"></i></span></div>
      <div>
        $NaN
      </div>
    </div>
    <div class="flex justify-between items-baseline text-base"><span>Outstanding Pledges Due</span>
      <div><span class="font-bold">$NaN</span></div>
    </div>
  </div>
  <div class="border-t mt-5">
    <div class="mt-5">
      <div class="flex items-center">
        <avatarimage-stub alt="john" src="globalAvatarPathprofileimage.png"></avatarimage-stub>
        <div class="ml-3 text-lg">john</div>
      </div>
      <div class="mt-4 flex justify-between border-b-2 border-grey-darkest capitalize">
        <div>Laps Completed</div>
        <div>32</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Flat Donations</div>
        <div>$2</div>
      </div>
      <!---->
      <div class="flex justify-between border-b-2 border-grey-darkest">
        <div>Total Pledged Amount</div>
        <div>$2</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Payment Scheduled Online</div>
        <div>$2</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Paid Online</div>
        <div>$0</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Checks and All Cash Deposits</div>
        <div>$NaN</div>
      </div>
      <div class="flex justify-between border-b-2 border-grey-darkest">
        <div>Total Payments Received</div>
        <div>$2</div>
      </div>
      <div class="text-base flex justify-between items-baseline">
        <div>Outstanding</div>
        <div class="font-bold">$0</div>
      </div>
    </div>
  </div>
  <div class="text-center mx-2 mt-4"><button class="inline-block py-2 px-4 text-secondary font-bold">
      Close Pledge Details
    </button></div>
</div>
`;

exports[`PledgingDetailsSummaryCard renders participant details summary card snapshot 2`] = `
<div class="text-sm">
  <div>
    <div class="flex justify-between border-b-2">
      <div>Total Pledged Amount</div>
      <div>
        $0
      </div>
    </div>
    <div class="flex justify-between border-b-2 border-grey-darkest">
      <div>
        Total Payments Received

        <span><i class="far fa-info-circle"></i></span></div>
      <div>
        $NaN
      </div>
    </div>
    <div class="flex justify-between items-baseline text-base"><span>Outstanding Pledges Due</span>
      <div><span class="font-bold">$NaN</span></div>
    </div>
  </div>
  <div class="border-t mt-5">
    <div class="mt-5">
      <div class="flex items-center">
        <avatarimage-stub alt="jane" src="globalAvatarPathprofileimage2.png"></avatarimage-stub>
        <div class="ml-3 text-lg">jane</div>
      </div>
      <div class="mt-4 flex justify-between border-b-2 border-grey-darkest capitalize">
        <div>Laps Completed</div>
        <div>33</div>
      </div>
      <!---->
      <!---->
      <!---->
      <div class="flex justify-between border-b-2">
        <div>Payment Scheduled Online</div>
        <div>$0</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Paid Online</div>
        <div>$0</div>
      </div>
      <div class="flex justify-between border-b-2">
        <div>Checks and All Cash Deposits</div>
        <div>$NaN</div>
      </div>
      <div class="flex justify-between border-b-2 border-grey-darkest">
        <div>Total Payments Received</div>
        <div>$0</div>
      </div>
      <div class="text-base flex justify-between items-baseline">
        <div>Outstanding</div>
        <div class="font-bold">$0</div>
      </div>
    </div>
  </div>
  <div class="text-center mx-2 mt-4"><button class="inline-block py-2 px-4 text-secondary font-bold">
      Close Pledge Details
    </button></div>
</div>
`;
